[gd_scene load_steps=2 format=3 uid="uid://yafncu70uhi5"]

[ext_resource type="Script" uid="uid://dtyr07cc1ejfi" path="res://scenes/ui/EndOfRunScreen.gd" id="1_v4ndj"]

[node name="EndOfRunScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v4ndj")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(300, 200)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -108.0
offset_right = 150.0
offset_bottom = 108.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="ResultLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Běh dokončen!"
horizontal_alignment = 1

[node name="XPLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Získáno XP: 150"
horizontal_alignment = 1

[node name="PlayAgainButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Hrát znovu"

[node name="EndRunButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Ukončit běh"
